--- a/src/partials/community.html
+++ b/src/partials/community.html
@@ -9,30 +9,40 @@
 
       <p class="community-top-p-follow">Follow us on:</p>
       <div class="community-sosial">
-        <div class="community-sosial-current">
-          <svg class="community-sosial-svg">
-            <use href="/sprite.svg#facebook"></use>
-          </svg>
-          <p class="community-sosial-p">Facebook</p>
-        </div>
-        <div class="community-sosial-current">
-          <svg class="community-sosial-svg">
-            <use href="/sprite.svg#instagram"></use>
-          </svg>
-          <p class="community-sosial-p">Instagram</p>
-        </div>
-        <div class="community-sosial-current">
-          <svg class="community-sosial-svg">
-            <use href="/sprite.svg#twitter"></use>
-          </svg>
-          <p class="community-sosial-p">Twitter / X</p>
-        </div>
-        <div class="community-sosial-current">
-          <svg class="community-sosial-svg">
-            <use href="/sprite.svg#youtube"></use>
-          </svg>
-          <p class="community-sosial-p">YouTube</p>
-        </div>
+        <a href="https://www.facebook.com/pizzarushgame"
+          ><div class="community-sosial-current">
+            <svg class="community-sosial-svg">
+              <use href="/sprite.svg#facebook"></use>
+            </svg>
+            <p class="community-sosial-p">Facebook</p>
+          </div></a
+        >
+        <a href="https://www.instagram.com/pizzarushgame/#">
+          <div class="community-sosial-current">
+            <svg class="community-sosial-svg">
+              <use href="/sprite.svg#instagram"></use>
+            </svg>
+            <p class="community-sosial-p">Instagram</p>
+          </div>
+        </a>
+
+        <a href="https://x.com/pizzarushgame">
+          <div class="community-sosial-current">
+            <svg class="community-sosial-svg">
+              <use href="/sprite.svg#twitter"></use>
+            </svg>
+            <p class="community-sosial-p">Twitter / X</p>
+          </div>
+        </a>
+
+        <a href="https://www.youtube.com/@pizzarushgame">
+          <div class="community-sosial-current">
+            <svg class="community-sosial-svg">
+              <use href="/sprite.svg#youtube"></use>
+            </svg>
+            <p class="community-sosial-p">YouTube</p>
+          </div>
+        </a>
       </div>
       <p class="community-sosial-use-p">Use hashtags to get featured:</p>
       <p class="community-sosial-bottom-p">
