--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -2,7 +2,10 @@
   <div class="container contact-container">
     <h2 class="contact-h2"> Contact & Support</h2>
     <p class="contact-text">Need help or want to share feedback?</p>
-    <p class="contact-email">Email us at: info@rushpulse.online</p>
+    <p class="contact-email">
+      Email us at:
+      <a href="mailto:info@rushpulse.online">info@rushpulse.online</a>
+    </p>
     <svg class="contact-email-svg"><use href="/sprite.svg#mail"></use></svg>
     <p class="contact-text">We’d love to hear from you!</p>
   </div>
