--- a/src/partials/play-now.html
+++ b/src/partials/play-now.html
@@ -8,7 +8,10 @@
         Join the delivery frenzy and rise through the pizza ranks. Serve fast,
         upgrade smart, and dominate the kitchen.
       </p>
-      <svg class="play-now-svg"><use href="/sprite.svg#link"></use></svg>
+      <a
+        href="https://play.google.com/store/apps/details?id=com.yamystudio.pizzarush&hl=en&gl=us"
+        ><svg class="play-now-svg"><use href="/sprite.svg#link"></use></svg
+      ></a>
     </div>
   </div>
 </section>
