--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -3,7 +3,7 @@
     <h2 class="reviews-h2">Reviews from Players</h2>
     <div class="swiper reviews-swiper">
       <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
+      <div class="swiper-wrapper reviews-swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide">
           <div class="reviews-slide-div">
@@ -97,8 +97,16 @@
 
       <!-- If we need navigation buttons -->
       <div class="reviews-swiper-buttons swiper-nav">
-        <div class="reviews-swiper-button-prev">asd</div>
-        <div class="reviews-swiper-button-next">asdsd</div>
+        <div class="reviews-swiper-button-prev">
+          <svg class="reviews-swiper-buttons-svg">
+            <use href="/sprite.svg#arrow-left"></use>
+          </svg>
+        </div>
+        <div class="reviews-swiper-button-next">
+          <svg class="reviews-swiper-buttons-svg">
+            <use href="/sprite.svg#arrow-right"></use>
+          </svg>
+        </div>
       </div>
     </div>
   </div>
