Create Upgrade section

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,10 +1,18 @@
 <section class="about-section" id="about" data-bg="green">
   <div class="about-section-wrapper">
     <div class="container about-container">
-      <img class="about-pizza-top" src="/img/pizza2x.webp" alt="Pizza image" />
+      <img
+        class="about-pizza-top"
+        width="226"
+        height="226"
+        src="/img/pizza2x.webp"
+        alt="Pizza image"
+      />
       <div class="about-pizza-bottom-wrapper">
         <img
           class="about-pizza-bottom"
+          width="162"
+          height="162"
           src="/img/pizza2x.webp"
           alt="Pizza image"
         />
