--- a/src/partials/upgrades.html
+++ b/src/partials/upgrades.html
@@ -1,3 +1,61 @@
 <section class="upgrades-section" id="upgrades" data-bg="green">
-  <div class="container">Upgrades Section</div>
+  <div class="container upgrades-container">
+    <div class="upgrades-text-box">
+      <img
+        class="upgrades-pizza-top"
+        width="253"
+        height="253"
+        src="/img/pizza2x.webp"
+        alt="Pizza image"
+      />
+      <img
+        class="upgrades-pizza-middle"
+        width="161"
+        height="161"
+        src="/img/pizza2x.webp"
+        alt="Pizza image"
+      />
+      <img
+        class="upgrades-pizza-bottom"
+        width="161"
+        height="161"
+        src="/img/pizza2x.webp"
+        alt="Pizza image"
+      />
+      <h2 class="upgrades-title">Upgrade Your Kitchen</h2>
+      <p class="upgrades-subtitle">Use the money you earn to:</p>
+      <ul class="upgrades-list">
+        <li class="upgrades-item">
+          <svg class="upgrades-item-icon" width="50" height="50">
+            <use href="/sprite.svg#tools"></use>
+          </svg>
+          Upgrade your pizza machine
+        </li>
+        <li class="upgrades-item">
+          <svg class="upgrades-item-icon" width="50" height="50">
+            <use href="/sprite.svg#pizza-slice"></use>
+          </svg>
+          Add new ingredient stations
+        </li>
+        <li class="upgrades-item">
+          <svg class="upgrades-item-icon" width="50" height="50">
+            <use href="/sprite.svg#lightning"></use>
+          </svg>
+          Speed up customer service
+        </li>
+        <li class="upgrades-item">
+          <svg class="upgrades-item-icon" width="50" height="50">
+            <use href="/sprite.svg#chef-toque-hat"></use>
+          </svg>
+          Expand the self-service area
+        </li>
+        <li class="upgrades-item">
+          <svg class="upgrades-item-icon" width="50" height="50">
+            <use href="/sprite.svg#money-duotone"></use>
+          </svg>
+          Customize your chef character for flair
+        </li>
+      </ul>
+    </div>
+  </div>
 </section>
