Refactor swiper components and styles for improved layout and functionality

--- a/src/partials/how-to-play.html
+++ b/src/partials/how-to-play.html
@@ -66,7 +66,7 @@
             <img
               src="/img/third-slide1x.webp"
               srcset="/img/third-slide1x.webp 1x, /img/third-slide2x.webp 2x"
-              alt="How to Play ilustration slide"
+              alt="Ho to Play ilustration slide"
               loading="lazy"
               decoding="async"
               width="286"
