--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,113 +1,90 @@
 <section class="reviews-section" id="reviews" data-bg="green">
   <div class="container reviews-container">
-    <h2 class="reviews-h2">Reviews from Players</h2>
+    <h2 class="reviews-title">Reviews from Players</h2>
     <div class="swiper reviews-swiper">
-      <!-- Additional required wrapper -->
-      <div class="swiper-wrapper reviews-swiper-wrapper">
-        <!-- Slides -->
-        <div class="swiper-slide">
-          <div class="reviews-slide-div">
-            <div class="reviews-slide-div-current">
-              <p class="reviews-slide-div-current-p">
-                Amanda R. <br />"The perfect mix of chaos and strategy. I love
-                how the pressure builds — it really keeps you on your toes!"
-              </p>
-            </div>
-            <div class="reviews-slide-div-current">
-              <p class="reviews-slide-div-current-p">
-                Daniel M. <br />"I didn’t expect the self-service area to be
-                this fun! Watching customers make their own pizzas is oddly
-                satisfying."
-              </p>
-            </div>
-            <div class="reviews-slide-div-current">
-              <p class="reviews-slide-div-current-p">
-                 Priya T.<br />
-                "The upgrade system is well thought out and makes a huge
-                difference as you progress. One of the best casual games I've
-                played this year.
-              </p>
-            </div>
-          </div>
+      <div class="swiper-wrapper">
+        <div class="reviews-swiper-slide swiper-slide">
+          <p class="reviews-slide-text">
+            Amanda R. <br />"The perfect mix of chaos and strategy. I love how
+            the pressure builds — it really keeps you on your toes!"
+          </p>
         </div>
-        <div class="swiper-slide">
-          <div class="reviews-slide-div">
-            <div class="reviews-slide-div-current">
-              <p class="reviews-slide-div-current-p">
-                Marcus L.<br />
-                "Every level feels like a real restaurant during peak hours — in
-                the best way possible. Addictive and very polished."
-              </p>
-            </div>
-            <div class="reviews-slide-div-current">
-              <p class="reviews-slide-div-current-p">
-                . Rachel G.<br />
-                "I’m addicted. Simple controls but the kind of game you want to
-                master. A must-download!"
-              </p>
-            </div>
-            <div class="reviews-slide-div-current">
-              <p class="reviews-slide-div-current-p">
-                 Evelyn S.<br />
-                "This game is brilliant. Fun, fast-paced, and challenging
-                without being overwhelming.
-              </p>
-            </div>
-          </div>
+        <div class="reviews-swiper-slide swiper-slide">
+          <p class="reviews-slide-text">
+            Daniel M. <br />"I didn’t expect the self-service area to be this
+            fun! Watching customers make their own pizzas is oddly satisfying."
+          </p>
         </div>
-        <div class="swiper-slide">
-          <div class="reviews-slide-div">
-            <div class="reviews-slide-div-current">
-              <p class="reviews-slide-div-current-p">
-                . Kevin B.<br />"My kids love the cooking aspect, and I enjoy
-                the strategy. Great for all ages!"
-              </p>
-            </div>
-            <div class="reviews-slide-div-current">
-              <p class="reviews-slide-div-current-p">
-                Luis H.<br />
-                "The animations and customer reactions are hilarious. It’s fun
-                even when I lose."
-              </p>
-            </div>
-            <div class="reviews-slide-div-current">
-              <p class="reviews-slide-div-current-p">
-                Tasha C.<br />
-                "Finally a mobile cooking game that isn’t just about tapping.
-                Timing and planning actually matter here."
-              </p>
-            </div>
-          </div>
+        <div class="reviews-swiper-slide swiper-slide">
+          <p class="reviews-slide-text">
+            Priya T.<br />
+            "The upgrade system is well thought out and makes a huge difference
+            as you progress. One of the best casual games I've played this year.
+          </p>
         </div>
-        <div class="swiper-slide">
-          <div class="reviews-slide-div">
-            <div class="reviews-slide-div-current">
-              <p class="reviews-slide-div-current-p">
-                 Ben W.<br />
-                "Smooth gameplay and no annoying ads. It's fast, fun, and super
-                replayable."
-              </p>
-            </div>
-          </div>
+        <div class="reviews-swiper-slide swiper-slide">
+          <p class="reviews-slide-text">
+            Marcus L.<br />
+            "Every level feels like a real restaurant during peak hours — in the
+            best way possible. Addictive and very polished."
+          </p>
         </div>
-        ...
+        <div class="reviews-swiper-slide swiper-slide">
+          <p class="reviews-slide-text">
+            Rachel G.<br />
+            "I’m addicted. Simple controls but the kind of game you want to
+            master. A must-download!"
+          </p>
+        </div>
+        <div class="reviews-swiper-slide swiper-slide">
+          <p class="reviews-slide-text">
+            Evelyn S.<br />
+            "This game is brilliant. Fun, fast-paced, and challenging without
+            being overwhelming.
+          </p>
+        </div>
+        <div class="reviews-swiper-slide swiper-slide">
+          <p class="reviews-slide-text">
+            Kevin B.<br />"My kids love the cooking aspect, and I enjoy the
+            strategy. Great for all ages!"
+          </p>
+        </div>
+        <div class="reviews-swiper-slide swiper-slide">
+          <p class="reviews-slide-text">
+            Luis H.<br />
+            "The animations and customer reactions are hilarious. It’s fun even
+            when I lose."
+          </p>
+        </div>
+        <div class="reviews-swiper-slide swiper-slide">
+          <p class="reviews-slide-text">
+            Tasha C.<br />
+            "Finally a mobile cooking game that isn’t just about tapping. Timing
+            and planning actually matter here."
+          </p>
+        </div>
+        <div class="reviews-swiper-slide swiper-slide">
+          <p class="reviews-slide-text">
+            Ben W.<br />
+            "Smooth gameplay and no annoying ads. It's fast, fun, and super
+            replayable."
+          </p>
+        </div>
       </div>
-      <!-- If we need pagination -->
-      <div class="reviews-swiper-pagination"></div>
-
-      <!-- If we need navigation buttons -->
-      <div class="reviews-swiper-buttons swiper-nav">
+      <div class="reviews-swiper-buttons">
         <div class="reviews-swiper-button-prev">
-          <svg class="reviews-swiper-buttons-svg">
+          <svg class="reviews-swiper-icon" width="71" height="71">
             <use href="/sprite.svg#arrow-left"></use>
           </svg>
         </div>
         <div class="reviews-swiper-button-next">
-          <svg class="reviews-swiper-buttons-svg">
+          <svg class="reviews-swiper-icon" width="71" height="71">
             <use href="/sprite.svg#arrow-right"></use>
           </svg>
         </div>
       </div>
     </div>
+
+    <div class="reviews-swiper-pagination"></div>
   </div>
 </section>
