--- a/src/css/how-to-play.css
+++ b/src/css/how-to-play.css
@@ -55,16 +55,20 @@
 }
 .how-to-play-swiper-pagination {
   margin-top: 32px;
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 12px;
 }
-.how-to-play-section {
+.how-to-play-swiper-pagination {
   --swiper-pagination-color: var(--red);
   --swiper-pagination-bullet-width: 12px;
   --swiper-pagination-bullet-height: 12px;
   --swiper-pagination-bullet-inactive-color: var(--white);
   --swiper-pagination-bullet-inactive-opacity: 1;
   --swiper-pagination-bullet-opacity: 1;
-  --swiper-pagination-bullet-horizontal-gap: 6px;
+  --swiper-pagination-bullet-horizontal-gap: 0px;
+  --swiper-pagination-bullet-vertical-gap: 0px;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -105,6 +109,10 @@
   .how-to-play-swiper-button-next:hover .swiper-arrow-icon,
   .how-to-play-swiper-button-prev:hover .swiper-arrow-icon {
     fill: var(--red);
+  }
+  .how-to-play-swiper-buttons > .swiper-button-disabled {
+    opacity: 0.5;
+    pointer-events: none;
   }
   .how-to-play-swiper-pagination {
     display: none;
