--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,145 +1,90 @@
 .reviews-container {
-  padding: 144px 0;
+  padding: 100px 0;
 }
-
-.reviews-h2 {
+.reviews-title {
   font-family: var(--font-family);
   font-weight: 600;
   font-size: 40px;
   color: var(--red);
-  margin-bottom: 42px;
+  margin-bottom: 40px;
   padding: 0 16px;
-  margin-left: -33px;
 }
-
 .reviews-swiper {
-  margin: 0;
-  height: 100%;
-  background-color: transparent;
+  height: 480px;
+  padding: 12px 16px !important;
+  margin-bottom: 16px;
 }
-
-.reviews-swiper .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: transparent;
-}
-
-.reviews-swiper .swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.reviews-swiper-buttons {
-  display: none;
-  position: relative;
-  width: 160px;
-  height: 60px;
-  margin: 0 auto;
-}
-
-.reviews-swiper-pagination {
-  display: flex;
-  justify-content: center;
-  gap: 12px;
-  margin-top: 32px;
-}
-
-.reviews-swiper-pagination .swiper-pagination-bullet {
-  background-color: var(--white);
-  opacity: 1;
-  width: 12px;
-  height: 12px;
-}
-
-.reviews-swiper-pagination .swiper-pagination-bullet-active {
-  background-color: orange;
-}
-
-.reviews-slide-div {
-  background-color: #7ead73;
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-}
-
-.reviews-slide-div-current {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid var(--green);
+.reviews-swiper-slide {
   border-radius: 12px;
-  padding: 4px 10px;
-
-  height: 129px;
+  padding: 22px 10px;
+  height: 129px !important;
   box-shadow: 0 0px 0px 0 rgba(154, 17, 32, 0.11),
     0 1px 1px 0 rgba(154, 17, 32, 0.18), 0 2px 2px 0 rgba(154, 17, 32, 0.23),
     0 4px 3px 0 rgba(154, 17, 32, 0.28), 0 6px 6px 0 rgba(154, 17, 32, 0.35),
     0 10px 10px 0 rgba(154, 17, 32, 0.46);
   background: var(--white);
 }
-
-.reviews-slide-div-current-p {
-  max-width: 268px;
+.reviews-slide-text {
   font-family: var(--third-family);
   font-weight: 400;
   font-size: 14px;
   color: var(--red);
-  text-align: left;
+}
+.reviews-swiper-buttons {
+  display: none;
+}
+.reviews-swiper-pagination {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 12px;
+}
+.reviews-swiper-pagination {
+  --swiper-pagination-color: var(--orange);
+  --swiper-pagination-bullet-width: 12px;
+  --swiper-pagination-bullet-height: 12px;
+  --swiper-pagination-bullet-inactive-color: var(--white);
+  --swiper-pagination-bullet-inactive-opacity: 1;
+  --swiper-pagination-bullet-opacity: 1;
+  --swiper-pagination-bullet-horizontal-gap: 0px;
+  --swiper-pagination-bullet-vertical-gap: 0px;
 }
 
 @media only screen and (min-width: 1200px) {
   .reviews-container {
-    padding-left: 64px;
-    padding-right: 64px;
+    padding: 144px 54px;
   }
-
+  .reviews-title {
+    padding: 0 10px;
+    margin-bottom: 42px;
+  }
   .reviews-swiper {
-    /* width: 1072px; */
-    margin: 0 !important;
-    margin-left: -20px !important;
+    height: 100%;
+    padding: 0 10px !important;
+    margin-bottom: 0;
   }
-
-  .swiper-slide {
-    display: flex !important;
-    justify-content: flex-start !important;
-  }
-
-  .reviews-swiper-wrapper {
-    margin-bottom: 32px;
-  }
-
-  .reviews-slide-div {
-    flex-direction: row;
-    justify-content: flex-start;
-    gap: 27px;
-  }
-
-  .reviews-slide-div-current {
-    min-width: 344px;
-    max-width: 424px;
-    justify-content: flex-start;
-  }
-
-  .reviews-swiper-pagination {
-    display: none;
+  .reviews-swiper-slide {
+    width: calc((100% - 40px) / 3) !important;
+    padding: 22px 18px;
   }
   .reviews-swiper-buttons {
-    width: 100%;
-    height: 100%;
     display: flex;
-
     justify-content: space-between;
+    margin-top: 32px;
   }
-
-  .reviews-swiper-buttons-svg {
-    width: 71px;
-    height: 71px;
-    fill: #fff;
+  .reviews-swiper-icon {
+    fill: var(--white);
+    transition: fill 0.3s ease-in-out;
+  }
+  .reviews-swiper-button-next:hover .reviews-swiper-icon,
+  .reviews-swiper-button-prev:hover .reviews-swiper-icon {
+    fill: var(--red);
+  }
+  .reviews-swiper-buttons > .swiper-button-disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+  .reviews-swiper-pagination {
+    display: none;
   }
 }
