Created Tips section

--- a/src/partials/how-to-play.html
+++ b/src/partials/how-to-play.html
@@ -124,12 +124,12 @@
 
       <div class="how-to-play-swiper-buttons">
         <div class="how-to-play-swiper-button-prev">
-          <svg class="swiper-arrow-icon" width="71" height="71">
+          <svg class="how-to-play-swiper-icon" width="71" height="71">
             <use href="/sprite.svg#arrow-left"></use>
           </svg>
         </div>
         <div class="how-to-play-swiper-button-next">
-          <svg class="swiper-arrow-icon" width="71" height="71">
+          <svg class="how-to-play-swiper-icon" width="71" height="71">
             <use href="/sprite.svg#arrow-right"></use>
           </svg>
         </div>
