--- a/src/css/how-to-play.css
+++ b/src/css/how-to-play.css
@@ -102,12 +102,12 @@
     display: flex;
     justify-content: space-between;
   }
-  .swiper-arrow-icon {
+  .how-to-play-swiper-icon {
     fill: var(--white);
     transition: fill 0.3s ease-in-out;
   }
-  .how-to-play-swiper-button-next:hover .swiper-arrow-icon,
-  .how-to-play-swiper-button-prev:hover .swiper-arrow-icon {
+  .how-to-play-swiper-button-next:hover .how-to-play-swiper-icon,
+  .how-to-play-swiper-button-prev:hover .how-to-play-swiper-icon {
     fill: var(--red);
   }
   .how-to-play-swiper-buttons > .swiper-button-disabled {
