--- a/src/partials/tips.html
+++ b/src/partials/tips.html
@@ -1,3 +1,54 @@
 <section class="tips-section" id="tips" data-bg="green">
-  <div class="container">Tips Section</div>
+  <div class="container tips-container">
+    <h2 class="tips-title">Tips for New Players</h2>
+    <div class="tips-content-box">
+      <div class="tips-swiper-button-prev">
+        <svg class="tips-swiper-icon" width="71" height="71">
+          <use href="/sprite.svg#arrow-left"></use>
+        </svg>
+      </div>
+      <div class="swiper tips-swiper">
+        <div class="swiper-wrapper">
+          <div class="tips-swiper-slide swiper-slide">
+            <svg class="tips-swiper-slide-icon" width="124" height="124">
+              <use href="/sprite.svg#time-line"></use>
+            </svg>
+            <p class="tips-slide-text">
+              Prioritize customers with shorter wait bars.
+            </p>
+          </div>
+          <div class="tips-swiper-slide swiper-slide">
+            <svg class="tips-swiper-slide-icon" width="124" height="124">
+              <use href="/sprite.svg#eyes"></use>
+            </svg>
+            <p class="tips-slide-text">
+              Keep an eye on self-service visitors — they may slow down others.
+            </p>
+          </div>
+          <div class="tips-swiper-slide swiper-slide">
+            <svg class="tips-swiper-slide-icon" width="124" height="124">
+              <use href="/sprite.svg#spatula"></use>
+            </svg>
+            <p class="tips-slide-text">
+              Use upgrades early to manage crowd flow.
+            </p>
+          </div>
+          <div class="tips-swiper-slide swiper-slide">
+            <svg class="tips-swiper-slide-icon" width="124" height="124">
+              <use href="/sprite.svg#brain"></use>
+            </svg>
+            <p class="tips-slide-text">
+              Balance speed with accuracy — a burnt pizza costs you!
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="tips-swiper-button-next">
+        <svg class="tips-swiper-icon" width="71" height="71">
+          <use href="/sprite.svg#arrow-right"></use>
+        </svg>
+      </div>
+    </div>
+    <div class="tips-swiper-pagination"></div>
+  </div>
 </section>
