--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container footer-container">
-    <div class="content-container">
+    <div class="footer-content-container">
       <div class="links-div">
         <a class="footer-link" href="#">Terms and Conditions</a>
         <a class="footer-link" href="#">Contact & Support</a>
@@ -17,6 +17,18 @@
         info@rushpulse.online<br />
         Website powered by RushPulse Studios
       </p>
+    </div>
+  </div>
+  <div class="cookies-container" data-cookie-banner hidden>
+    <p class="cookies-text">
+      We use cookies to improve your experience on our website. By browsing this
+      website, you agree to our use of cookies.
+    </p>
+    <div class="cookies-buttons">
+      <button class="cookies-decline" data-cookie-decline>
+        DECLINE COOKIES
+      </button>
+      <button class="cookies-accept" data-cookie-accept>ACCEPT COOKIES</button>
     </div>
   </div>
 </footer>
