--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -4,7 +4,9 @@
     <p class="contact-text">Need help or want to share feedback?</p>
     <p class="contact-email">
       Email us at:
-      <a href="mailto:info@rushpulse.online">info@rushpulse.online</a>
+      <a class="contact-email-link" href="mailto:info@rushpulse.online"
+        >info@rushpulse.online</a
+      >
     </p>
     <svg class="contact-email-svg"><use href="/sprite.svg#mail"></use></svg>
     <p class="contact-text">We’d love to hear from you!</p>
