--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -14,7 +14,10 @@
         Pizza Rush and all associated content are trademarks of RushPulse<br />
         Games.<br />
         For support, press, or business inquiries, contact:
-        info@rushpulse.online<br />
+        <a class="footer-link" href="mailto:info@rushpulse.online"
+          >info@rushpulse.online</a
+        >
+        <br />
         Website powered by RushPulse Studios
       </p>
     </div>
