--- a/src/css/game-info.css
+++ b/src/css/game-info.css
@@ -24,6 +24,7 @@
   font-weight: 500;
   font-size: 18px;
   color: var(--white);
+  text-align: center;
 }
 
 @media only screen and (min-width: 1200px) {
