--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,9 @@
   <div class="container footer-container">
     <div class="footer-content-container">
       <div class="links-div">
-        <a class="footer-link" href="#">Terms and Conditions</a>
+        <a class="footer-link" href="./terms-conditions.html"
+          >Terms and Conditions</a
+        >
         <a class="footer-link" href="#">Contact & Support</a>
         <a class="footer-link" href="./privacy-policy.html">Privacy Policy</a>
       </div>
