--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -29,7 +29,7 @@
           <svg class="features-pizza-icon" width="37" height="25">
             <use href="/sprite.svg#money"></use>
           </svg>
-          <h3 class="features-pizza-title">Upgrade <br />System:</h3>
+          <h3 class="features-pizza-title">Upgrade System:</h3>
           <p class="features-pizza-text">
             Use your hard-earned tips to improve speed, machines, and customer
             flow.
