--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,37 +1,50 @@
 <section class="hero-section" data-bg="orange">
   <div class="container hero-container">
-    <img src="/img/pizza-slice2x.webp" class="hero-slice" alt="Pizz Slice"/>
+    <img src="/img/pizza-slice2x.webp" class="hero-slice" alt="Pizz Slice" />
     <div class="hero-text">
       <div class="hero-title-wrapper">
         <h1 class="hero-title">Pizza Rush</h1>
       </div>
       <p class="hero-subtitle">The Ultimate Pizza Delivery Challenge</p>
       <p class="hero-description">
-        Step into the heat of the kitchen and prove you can handle the rush! <br> In
-        Pizza Rush, you'll take on the role of a high-speed pizza chef,battling
-        time and hunger to deliver fresh, hot pies to impatient customers. <br> Are
-        you fast enough to keep up?
+        Step into the heat of the kitchen and prove you can handle the rush!
+        <br />
+        In Pizza Rush, you'll take on the role of a high-speed pizza chef,
+        battling time and hunger to deliver fresh, hot pies to impatient
+        customers. <br />
+        Are you fast enough to keep up?
       </p>
       <div class="hero-buttons">
-        <a href="https://www.youtube.com/watch?v=agA3zH3jpyY" target="_blank" rel="noopener noreferrer" class="hero-watch-btn">Watch Trailer</a>
-        <a href="https://play.google.com/store/apps/details?id=com.yamystudio.pizzarush&hl=en&gl=us " target="_blank" rel="noopener noreferrer" class="hero-play-btn">Play Now</a>
+        <a
+          href="https://www.youtube.com/watch?v=agA3zH3jpyY"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="hero-watch-btn"
+          >Watch Trailer</a
+        >
+        <a
+          href="https://play.google.com/store/apps/details?id=com.yamystudio.pizzarush&hl=en&gl=us "
+          target="_blank"
+          rel="noopener noreferrer"
+          class="hero-play-btn"
+          >Play Now</a
+        >
       </div>
     </div>
-    <div class="hero-image">
-      <picture>
-        <source
-          srcset="/img/hero1x.webp 1x, /img/hero2x.webp 2x"
-          type="image/webp"
-        />
-        <img
-          src="/img/hero1x.webp"
-          srcset="/img/hero1x.webp 1x, /img/hero2x.webp 2x"
-          alt="Pizza Rush Game Image"
-          loading="lazy"
-          decoding="async"
-          width="800"
-          height="600"
-        />
-      </picture>
+    <picture class="hero-image">
+      <source
+        srcset="/img/hero1x.webp 1x, /img/hero2x.webp 2x"
+        type="image/webp"
+      />
+      <img
+        src="/img/hero1x.webp"
+        srcset="/img/hero1x.webp 1x, /img/hero2x.webp 2x"
+        alt="Pizza Rush Game Image"
+        loading="lazy"
+        decoding="async"
+        width="800"
+        height="600"
+      />
+    </picture>
   </div>
 </section>
