--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,3 +29,4 @@
 @import url('./footer.css');
 @import url('./privacy-policy.css');
 @import url('./terms-conditions.css');
+@import url('./cookies.css');
