--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,8 +5,8 @@
         <a class="footer-link" href="./terms-conditions.html"
           >Terms and Conditions</a
         >
-        <a class="footer-link" href="#">Contact & Support</a>
         <a class="footer-link" href="./privacy-policy.html">Privacy Policy</a>
+        <a class="footer-link" href="./cookies.html">Cookie Policy</a>
       </div>
       <p class="footer-all-rights">
         © 2025 RushPulse Games. All rights reserved.
