--- a/src/partials/play-now.html
+++ b/src/partials/play-now.html
@@ -9,9 +9,11 @@
         upgrade smart, and dominate the kitchen.
       </p>
       <a
+        class="play-now-link"
         href="https://play.google.com/store/apps/details?id=com.yamystudio.pizzarush&hl=en&gl=us"
-        ><svg class="play-now-svg"><use href="/sprite.svg#link"></use></svg
-      ></a>
+      >
+        <svg class="play-now-svg"><use href="/sprite.svg#link"></use></svg>
+      </a>
     </div>
   </div>
 </section>
