--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -15,6 +15,7 @@
 .links-div {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 32px;
   margin-bottom: 32px;
 }
@@ -25,6 +26,7 @@
   font-size: 16px;
   text-align: center;
   color: var(--white);
+  width: fit-content;
   transition: color 0.3s ease-in-out;
 }
 .footer-link:hover {
