--- a/src/partials/community.html
+++ b/src/partials/community.html
@@ -9,7 +9,9 @@
 
       <p class="community-top-p-follow">Follow us on:</p>
       <div class="community-sosial">
-        <a href="https://www.facebook.com/pizzarushgame"
+        <a
+          class="community-sosial-link"
+          href="https://www.facebook.com/pizzarushgame"
           ><div class="community-sosial-current">
             <svg class="community-sosial-svg">
               <use href="/sprite.svg#facebook"></use>
@@ -17,7 +19,10 @@
             <p class="community-sosial-p">Facebook</p>
           </div></a
         >
-        <a href="https://www.instagram.com/pizzarushgame/#">
+        <a
+          class="community-sosial-link"
+          href="https://www.instagram.com/pizzarushgame/#"
+        >
           <div class="community-sosial-current">
             <svg class="community-sosial-svg">
               <use href="/sprite.svg#instagram"></use>
@@ -26,7 +31,7 @@
           </div>
         </a>
 
-        <a href="https://x.com/pizzarushgame">
+        <a class="community-sosial-link" href="https://x.com/pizzarushgame">
           <div class="community-sosial-current">
             <svg class="community-sosial-svg">
               <use href="/sprite.svg#twitter"></use>
@@ -35,7 +40,10 @@
           </div>
         </a>
 
-        <a href="https://www.youtube.com/@pizzarushgame">
+        <a
+          class="community-sosial-link"
+          href="https://www.youtube.com/@pizzarushgame"
+        >
           <div class="community-sosial-current">
             <svg class="community-sosial-svg">
               <use href="/sprite.svg#youtube"></use>
