Add target and rel attributes to social media links for improved security

--- a/src/partials/community.html
+++ b/src/partials/community.html
@@ -11,6 +11,8 @@
       <div class="community-sosial">
         <a
           class="community-sosial-link"
+          target="_blank"
+          rel="noopener noreferrer"
           href="https://www.facebook.com/pizzarushgame"
           ><div class="community-sosial-current">
             <svg class="community-sosial-svg">
@@ -21,6 +23,8 @@
         >
         <a
           class="community-sosial-link"
+          target="_blank"
+          rel="noopener noreferrer"
           href="https://www.instagram.com/pizzarushgame/#"
         >
           <div class="community-sosial-current">
@@ -31,7 +35,12 @@
           </div>
         </a>
 
-        <a class="community-sosial-link" href="https://x.com/pizzarushgame">
+        <a
+          class="community-sosial-link"
+          target="_blank"
+          rel="noopener noreferrer"
+          href="https://x.com/pizzarushgame"
+        >
           <div class="community-sosial-current">
             <svg class="community-sosial-svg">
               <use href="/sprite.svg#twitter"></use>
