Refactor data attributes for improved consistency and readability across JavaScript and HTML files

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header" data-bg="green">
+<header class="header" data-header data-bg="green">
   <div class="container header-container">
     <a href="./index.html" class="logo-link">Pizza Rush</a>
     <nav class="header-nav">
