--- a/src/partials/how-to-play.html
+++ b/src/partials/how-to-play.html
@@ -1,7 +1,7 @@
 <section class="how-to-play-section" id="how-to-play" data-bg="orange">
   <div class="container how-to-play-container">
     <h2 class="how-to-play-title">How to Play</h2>
-    <div class="how-to-play-swiper swiper">
+    <div class="how-to-play-swiper swiper" data-htp-swiper>
       <div class="swiper-wrapper">
         <div class="how-to-play-slide swiper-slide">
           <div class="how-to-play-slide-text">
@@ -123,17 +123,17 @@
       </div>
 
       <div class="how-to-play-swiper-buttons">
-        <div class="how-to-play-swiper-button-prev">
+        <div class="how-to-play-swiper-button-prev" data-htp-button-prev>
           <svg class="how-to-play-swiper-icon" width="71" height="71">
             <use href="/sprite.svg#arrow-left"></use>
           </svg>
         </div>
-        <div class="how-to-play-swiper-button-next">
+        <div class="how-to-play-swiper-button-next" data-htp-button-next>
           <svg class="how-to-play-swiper-icon" width="71" height="71">
             <use href="/sprite.svg#arrow-right"></use>
           </svg>
         </div>
-        <div class="how-to-play-swiper-pagination"></div>
+        <div class="how-to-play-swiper-pagination" data-htp-pagination></div>
       </div>
     </div>
   </div>
