--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,4 +1,4 @@
-<div class="mobile-menu" data-state="closed">
+<div class="mobile-menu" data-mobile-menu data-state="closed">
   <ul class="mobile-menu-list">
     <li class="mobile-menu-item">
       <a href="#about" class="mobile-menu-link" data-action="close-menu"
