--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,7 +1,7 @@
 <section class="reviews-section" id="reviews" data-bg="green">
   <div class="container reviews-container">
     <h2 class="reviews-title">Reviews from Players</h2>
-    <div class="swiper reviews-swiper">
+    <div class="swiper reviews-swiper" data-reviews-swiper>
       <div class="swiper-wrapper">
         <div class="reviews-swiper-slide swiper-slide">
           <p class="reviews-slide-text">
@@ -72,18 +72,18 @@
         </div>
       </div>
       <div class="reviews-swiper-buttons">
-        <div class="reviews-swiper-button-prev">
+        <div class="reviews-swiper-button-prev" data-reviews-button-prev>
           <svg class="reviews-swiper-icon" width="71" height="71">
             <use href="/sprite.svg#arrow-left"></use>
           </svg>
         </div>
-        <div class="reviews-swiper-button-next">
+        <div class="reviews-swiper-button-next" data-reviews-button-next>
           <svg class="reviews-swiper-icon" width="71" height="71">
             <use href="/sprite.svg#arrow-right"></use>
           </svg>
         </div>
       </div>
     </div>
-    <div class="reviews-swiper-pagination"></div>
+    <div class="reviews-swiper-pagination" data-reviews-pagination></div>
   </div>
 </section>
