--- a/src/partials/tips.html
+++ b/src/partials/tips.html
@@ -2,12 +2,12 @@
   <div class="container tips-container">
     <h2 class="tips-title">Tips for New Players</h2>
     <div class="tips-content-box">
-      <div class="tips-swiper-button-prev">
+      <div class="tips-swiper-button-prev" data-tips-button-prev>
         <svg class="tips-swiper-icon" width="71" height="71">
           <use href="/sprite.svg#arrow-left"></use>
         </svg>
       </div>
-      <div class="swiper tips-swiper">
+      <div class="swiper tips-swiper" data-tips-swiper>
         <div class="swiper-wrapper">
           <div class="tips-swiper-slide swiper-slide">
             <svg class="tips-swiper-slide-icon" width="124" height="124">
@@ -43,12 +43,12 @@
           </div>
         </div>
       </div>
-      <div class="tips-swiper-button-next">
+      <div class="tips-swiper-button-next" data-tips-button-next>
         <svg class="tips-swiper-icon" width="71" height="71">
           <use href="/sprite.svg#arrow-right"></use>
         </svg>
       </div>
     </div>
-    <div class="tips-swiper-pagination"></div>
+    <div class="tips-swiper-pagination" data-tips-pagination></div>
   </div>
 </section>
