--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,3 +1,6 @@
+.reviews-section {
+  scroll-margin-top: 18px;
+}
 .reviews-container {
   padding: 100px 0;
 }
@@ -51,6 +54,9 @@
 }
 
 @media only screen and (min-width: 1200px) {
+  .reviews-section {
+    scroll-margin-top: 0px;
+  }
   .reviews-container {
     padding: 124px 54px;
   }
