--- a/src/css/tips.css
+++ b/src/css/tips.css
@@ -60,6 +60,9 @@
 }
 
 @media only screen and (min-width: 1200px) {
+  .tips-section {
+    scroll-margin-top: 130px;
+  }
   .tips-title {
     margin-bottom: 42px;
   }
