--- a/src/css/upgrades.css
+++ b/src/css/upgrades.css
@@ -64,6 +64,10 @@
   height: 50px;
 }
 @media only screen and (min-width: 1200px) {
+  .upgrades-section {
+    padding-top: 134px;
+    scroll-margin-top: -34px;
+  }
   .upgrades-text-box {
     margin: 0 182px;
     padding: 42px 72px;
